Fix h1 letter spacing

--- a/content/assets/style/2021q1.css
+++ b/content/assets/style/2021q1.css
@@ -693,7 +693,7 @@ h1 {
   font-size: 56px;
   line-height: 60px;
 
-  letter-spacing: -0.05ch;
+  letter-spacing: -0.03ch;
 
   font-weight: 400;
 
